* org/cougaar/bootstrap/Bootstrapper.java: Use more reliable way of creating a file URL in the case where a classpath element fails to directly specify a URL.